kubernetes/apps/kube-system/cilium/app/cilium-host-node-cidr-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cilium-host-node-cidr
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: cilium-host-node-cidr
  template:
    metadata:
      name: cilium-host-node-cidr
      labels:
        app: cilium-host-node-cidr
    spec:
      hostNetwork: true
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: Exists
        - key: "node-role.kubernetes.io/control-plane"
          operator: Exists
      containers:
        - name: cilium-host-node-cidr
          image: alpine
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
            - |
              [...]
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
