kubernetes/apps/kube-system/cilium/app/ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ts
spec:
  defaultBackend:
    service:
      name: hubble-ui
      port:
        number: 8081
  ingressClassName: tailscale
  tls:
    - hosts:
        - cilium
